# Spider

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
HTTPClient/: httpclient.cpp  httpclient.h
Signals/: signals.cpp  signals.h
SpiderDB/: spiderdb.cpp  spiderdb.h
